[project]
name = "liteyukibot-plugin-nonebot"
version = "0.1.3"
description = "Nonebot2 Support for LiteyukiBot"
authors = [
    { name = "snowykami", email = "snowykami@outlook.com" },
]
dependencies = [
    "pdm ~= 2.18.1",
    "nonebot2[fastapi,httpx,websockts]>=2.3.2",
    "liteyukibot>=6.3.6",
    "nonebot-adapter-satori>=0.12.3",
    "nonebot-adapter-onebot>=2.4.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
include_packages = ["liteyukibot"]

[tool.pdm.scripts]
start = "python main.py"
test = "pytest"